fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
 
 @layer components {
   .App {
-    @apply w-screen h-screen overflow-x-hidden;
+    @apply w-screen h-screen overflow-hidden;
   }
   .primary-btn {
     @apply bg-blue-500 text-white hover:bg-blue-600 transition-colors;
